[tool.poetry]
name = "vulcan"
version = "0.1.0"
description = ""
authors = ["Seanlimzl <93197451+Seanlimzl@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
streamlit = "^1.42.0"
pandas = "^2.2.3"
folium = "^0.19.4"
geopandas = "^1.0.1"
scipy = "^1.15.2"
pyproj = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
